_source search parameter needs to support modifiers - added support form :contains, :missing, :above modifiers - fixes